<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projects.pro_passwords.LoginFragment$PlaceholderFragment" >

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/signuptext" />

    <EditText
        android:id="@+id/passwordResgisteration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordResgisteration"
        android:layout_alignLeft="@+id/passwordResgisteration"
        android:text="@string/password" />

    <TextView
        android:id="@+id/anotherPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordResgisteration"
        android:layout_below="@+id/passwordResgisteration"
        android:layout_marginTop="20dp"
        android:text="@string/repeat" />

    <EditText
        android:id="@+id/usernameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordTextView"
        android:layout_alignLeft="@+id/passwordResgisteration"
        android:layout_marginBottom="20dp"
        android:ems="10" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usernameRegister"
        android:layout_alignLeft="@+id/passwordResgisteration"
        android:text="@string/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordResgisteration"
        android:layout_below="@+id/anotherPasswordTextView"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/signbt" />

</RelativeLayout>
